# Agenda

./: ANN.ipynb  agenda.db  create_agenda_db.py  index.html  main.py  pyproject.toml
