[tool.poetry]
name = "agenda"
version = "0.1.0"
description = ""
authors = ["RodolfoxvData <136007122+Rodolfoxxv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
duckdb = "^0.10.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
